# BrickQL

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
brickql/: __init__.py  errors.py
brickql/compile/: __init__.py  base.py  builder.py  clause_builders.py  context.py  expression_builder.py  mysql.py  postgres.py  registry.py  sqlite.py
brickql/policy/: __init__.py  engine.py
brickql/prompt/: __init__.py  builder.py
brickql/schema/: __init__.py  column_reference.py  context.py  converters.py  dialect.py  expressions.py  operands.py  query_plan.py  snapshot.py
brickql/validate/: __init__.py  dialect_validator.py  operand_validator.py  schema_validator.py  semantic_validator.py  validator.py
bricksql/: __init__.py  errors.py
bricksql/compile/: __init__.py  builder.py  postgres.py  sqlite.py
bricksql/policy/: __init__.py  engine.py
bricksql/prompt/: __init__.py  builder.py
bricksql/schema/: __init__.py  dialect.py  query_plan.py  snapshot.py
bricksql/validate/: __init__.py  validator.py
brinkql/: __init__.py  errors.py
brinkql/compile/: __init__.py  base.py  builder.py  postgres.py  sqlite.py
brinkql/policy/: __init__.py  engine.py
brinkql/prompt/: __init__.py  builder.py
brinkql/schema/: __init__.py  dialect.py  expressions.py  query_plan.py  snapshot.py
brinkql/validate/: __init__.py  validator.py
docs/: how-it-works.excalidraw  how-it-works.mmd
examples/: README.md  __init__.py  _case.py  _ollama.py  _seed.py  _setup.py  _trial.py  runner.py
examples/cases/: __init__.py  c01_basic_select.py  c02_filtering.py  c03_ordering_paging.py  c04_joins.py  c05_aggregations.py  c06_subqueries.py  c07_ctes.py  c08_set_operations.py  c09_window_functions.py  c10_complex.py
examples/trials/c01_01/: 20260221T010018Z.json  20260221T010120Z.json  20260221T010304Z.json  20260221T011301Z.json  20260221T011321Z.json  20260221T011348Z.json  20260221T011414Z.json  20260221T011542Z.json  20260221T011555Z.json
examples/trials/c01_02/: 20260221T011645Z.json
examples/trials/c01_03/: 20260221T011754Z.json
examples/trials/c02_01/: 20260221T011847Z.json
tests/: conftest.py  test_compile.py  test_converters.py  test_policy.py  test_prompt.py  test_validate.py
tests/fixtures/: __init__.py  ddl_mysql.sql  ddl_postgres.sql  ddl_sqlite.sql  schema.json
tests/integration/: test_mysql.py  test_postgres.py  test_sqlite.py
