[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bricksql"
version = "0.1.0"
description = "Policy-driven, SQL-standard-aligned query orchestration framework for LLM planners."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["sql", "llm", "query", "orchestration", "policy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.12",
]

[project.optional-dependencies]
# psycopg (v3) is the modern PostgreSQL adapter; replaces psycopg2.
# pip install "bricksql[postgres]" to add the optional Postgres driver.
postgres = [
    "psycopg[binary]>=3.3",
]
dev = [
    # testing
    "pytest>=9.0",
    "pytest-docker>=3.2",
    "psycopg[binary]>=3.3",
    # linting & formatting (ruff replaces flake8 + isort + black)
    "ruff>=0.15",
    # type checking
    "mypy>=1.19",
    "pydantic>=2.12",  # needed for mypy plugin
]

[project.urls]
"Homepage" = "https://github.com/your-org/bricksql"
"Bug Tracker" = "https://github.com/your-org/bricksql/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bricksql*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require a live database)",
    "postgres: marks tests requiring a PostgreSQL instance (via Docker Compose)",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting, replaces flake8 / isort / pyupgrade / black)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "ANN",  # flake8-annotations (require type hints)
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN101",  # missing type annotation for self (removed in Python 3.12+)
    "ANN102",  # missing type annotation for cls
    "ANN204",  # missing return type for __init__
    "PLR2004", # magic value comparison (too noisy for tests)
]

[tool.ruff.lint.isort]
known-first-party = ["bricksql"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy (static type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["psycopg2.*"]
ignore_missing_imports = true
