[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brickql"
version = "0.1.4"
description = "Policy-driven, SQL-standard-aligned query orchestration framework for LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["sql", "llm", "query", "orchestration", "policy", "ai", "nlp", "rag", "pydantic", "sqlite", "postgresql"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pydantic>=2.12",
]

[project.optional-dependencies]
# psycopg (v3) is the modern PostgreSQL adapter; replaces psycopg2.
# pip install "brickql[postgres]" to add the optional Postgres driver.
postgres = [
    "psycopg[binary]>=3.3",
]
# SQLAlchemy engine reflector - used by schema_from_sqlalchemy().
# pip install "brickql[sqlalchemy]"
sqlalchemy = [
    "sqlalchemy>=2.0",
]
examples = [
    # LangChain + Ollama integration for the examples/ runner
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
]
dev = [
    # testing
    "pytest>=9.0",
    "pytest-docker>=3.2",
    "psycopg[binary]>=3.3",
    "sqlalchemy>=2.0",
    # linting & formatting (ruff replaces flake8 + isort + black)
    "ruff>=0.15",
    # type checking
    "mypy>=1.19",
    "pydantic>=2.12",  # needed for mypy plugin
    # examples runner
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
]

[project.urls]
"Homepage" = "https://brickql.org"
"Documentation" = "https://brickql.org"
"Source" = "https://github.com/flyingraptor/BrickQL"
"Bug Tracker" = "https://github.com/flyingraptor/BrickQL/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["brickql*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require a live database)",
    "postgres: marks tests requiring a PostgreSQL instance (via Docker Compose)",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting, replaces flake8 / isort / pyupgrade / black)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "ANN",  # flake8-annotations (require type hints)
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN204",  # missing return type for __init__
    "PLR2004", # magic value comparison (too noisy for tests)
    # TYPE_CHECKING import guards: many imports serve dual purpose (runtime +
    # typing) or are in modules that don't yet use from __future__ import
    # annotations; suppressed until a dedicated TYPE_CHECKING pass is done.
    "TC001",
    "TC002",
    "TC003",
    # Em-dashes and similar typographic characters are intentional in
    # docstrings and comments - they are not visually ambiguous here.
    "RUF002",
    "RUF003",
    # __all__ is organised by category (schema / compile / policy / …) which
    # is more readable than strict alphabetical order.
    "RUF022",
    # Complexity: pre-existing dispatch / builder functions that would need a
    # larger refactor to simplify meaningfully.
    "PLR0911",
    "PLR0912",
    # zip() over finite, same-length iterables: strict= would add noise with
    # no safety benefit in the current call sites.
    "B905",
    # Local imports inside functions are intentional to break circular
    # dependencies between brickql sub-packages.
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
# Test functions implicitly return None; annotating every def test_*() -> None
# is pure boilerplate. Suppress all ANN rules for test files.
"tests/**/*.py" = ["ANN"]
# typing.Any is intentional in the source for JSON/predicate structures where
# the shape is validated structurally rather than via static types.
"brickql/**/*.py" = ["ANN401"]
# SQL fixture INSERT strings in the Postgres integration tests legitimately
# exceed 100 chars; splitting them would harm readability.
"tests/integration/test_postgres.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["brickql"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy (static type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["psycopg2.*"]
ignore_missing_imports = true
